lightbox: Prevent long titles from altering layout.
This commit attempts to prevent images with long filenames,
descriptions, or author names displayed in the lightbox from altering
the layout of the page.

It also adds a title prop to both the filename and author, allowing a
user to hover and see a tooltip of the full text in the case where the
text is truncated.

Fixes #21058.

--- a/static/styles/lightbox.css
+++ b/static/styles/lightbox.css
@@ -48,11 +48,11 @@
     }
 
     .exit {
-        float: right;
+        flex-shrink: 0;
 
         color: hsla(0, 0%, 100%, 0.8);
         font-size: 2rem;
-        margin: 11px 20px 0 0;
+        margin: 6px 20px 0 0;
 
         transform: scaleY(0.75);
         font-weight: 300;
@@ -70,16 +70,18 @@
 
     .image-info-wrapper {
         background-color: transparent;
+        display: flex;
+        flex-flow: row wrap;
     }
 
     .image-description,
     .image-actions {
-        float: left;
         margin: 20px;
     }
 
     .image-actions {
-        float: right;
+        flex-shrink: 0;
+        margin-left: auto;
 
         .lightbox-canvas-trigger {
             display: inline-block;
@@ -150,21 +152,21 @@
     }
 
     .image-description {
+        display: flex;
+        flex-direction: column;
+        max-width: calc(100% - 350px);
         /* add some extra margin top and remove some bottom to keep the
         height the same. and vertically center the text with the buttons. */
         margin-top: 25px;
         margin-bottom: 15px;
 
-        font-size: 1.3rem;
+        font-size: 1.1rem;
         color: hsl(0, 0%, 100%);
 
         .title {
-            display: inline-block;
             vertical-align: top;
-
             font-weight: 400;
             line-height: normal;
-            max-width: calc(100% - 110px);
 
             /* Required for text-overflow */
             white-space: nowrap;
@@ -174,8 +176,6 @@
 
         .user {
             max-width: 200px;
-            display: inline-block;
-            vertical-align: top;
             font-weight: 300;
             line-height: normal;
             text-overflow: ellipsis;
@@ -262,7 +262,8 @@
 @media only screen and ($ms_min <= width < $md_min) {
     #lightbox_overlay {
         .image-actions {
-            float: left;
+            width: 100%;
+            padding-left: 15px;
             margin-top: 0;
         }
 
@@ -272,10 +273,6 @@
             overflow: hidden;
             text-overflow: ellipsis;
             margin-bottom: 5px;
-
-            .title {
-                max-width: calc(100% - 70px);
-            }
         }
 
         .center .image-list {
@@ -290,7 +287,17 @@
         }
 
         .image-preview {
-            height: calc(100% - 101px - 95px);
+            height: calc(100% - 101px - 104px);
+        }
+
+        .image-info-wrapper {
+            align-items: flex-end;
+        }
+
+        .exit {
+            position: absolute;
+            right: 5px;
+            top: 6px;
         }
     }
 }
